.style and dark mode getSVG and getPNG fix

--- a/dev/style.css
+++ b/dev/style.css
@@ -21,6 +21,7 @@
   display: table;
   width: 100%;
   border-radius: 5px;
+  background-color: lightgray;
 }
 
     .ex-header-buttons-wrapper-light {
